Fix CORS final